<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_background"
        android:padding="0dp"
        android:theme="@style/AppTheme"
        tools:context=".ui.MainActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/register_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_photo"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/button_main"
            android:padding="0dp"
            android:radius="100dp"
            android:text="@string/register_plus"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/userImage"
            app:layout_constraintEnd_toEndOf="@id/userImage"
            app:layout_constraintStart_toStartOf="@id/userImage"
            app:layout_constraintTop_toBottomOf="@id/userImage"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register_text"
            android:textColor="@color/text_title_main"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nicknameInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImage" />

        <EditText
            android:id="@+id/nicknameInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/autofill_hint_username"
            android:background="@drawable/input_background"
            android:hint="@string/register_nickname"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_title_main"
            android:textColorHint="@color/text_placeholder_main"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="500dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/autofill_hint_email"
            android:background="@drawable/input_background"
            android:hint="@string/register_enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_title_main"
            android:textColorHint="@color/text_placeholder_main"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="500dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="@string/autofill_hint_new_password"
            android:background="@drawable/input_background"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_placeholder_main"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="500dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/button_main"
            android:radius="100dp"
            android:text="@string/register_sign_up_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/loginText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="480dp" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:text="@string/register_link_to_login_page"
            android:textColor="@color/text_link_bright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>