<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.CreatePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_main"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxWidth="500dp"
            android:theme="@style/AppTheme">

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/captureButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="-25dp"
                android:background="@drawable/btn_circle"
                android:contentDescription="@string/create_post_make_photo"
                android:src="@drawable/ic_make_photo"
                app:layout_constraintBottom_toBottomOf="@id/previewView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.5"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/switchCameraButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:backgroundTint="@color/settings_placeholder"
                android:contentDescription="@string/switch_camera_btn"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_switch_camera"
                app:layout_constraintBottom_toBottomOf="@id/previewView"
                app:layout_constraintEnd_toEndOf="@id/previewView"
                app:tint="@color/button_main" />

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/create_post_preview_photo"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/autofill_hint_post_title"
                android:hint="@string/create_post_post_title"
                android:inputType="text"
                android:maxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewView" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/autofill_hint_post_description"
                android:hint="@string/create_post_post_description"
                android:inputType="text"
                android:maxLength="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleEditText" />

            <TextView
                android:id="@+id/coordinatesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_post_latitude_longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_main"
                android:text="@string/create_post_submit_post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coordinatesTextView" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                style="@style/CustomBottomNavigationView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bottom_tab_main"
                app:itemIconTint="@drawable/bottom_navigation_icon_active"
                app:itemTextColor="@drawable/bottom_navigation_icon_active"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_navigation_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>