<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_background"
        android:padding="0dp"
        android:theme="@style/AppTheme"
        tools:context=".ui.LoginActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login_photo"
            android:contentDescription="@string/login_image"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/login_text"
            android:textColor="@color/text_title_main"
            app:layout_constraintTop_toBottomOf="@id/userImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/autofill_hint_email"
            android:textColor="@color/text_title_main"
            android:hint="@string/login_enter_your_email"
            android:textColorHint="@color/text_placeholder_main"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="500dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword"
            android:autofillHints="@string/autofill_hint_current_password"
            android:textColor="@color/text_title_main"
            android:hint="@string/login_password"
            android:textColorHint="@color/text_placeholder_main"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="500dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:radius="100dp"
            android:textSize="18sp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_main"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="480dp" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_link_to_register_page"
            android:textColor="@color/text_link_bright"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>