<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:theme="@style/AppTheme"
    tools:context=".ui.PostMapActivity">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/infoWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/infoWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/coordsWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/latitudeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_map_latitude"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/longitudeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_map_longitude"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingHorizontal="16dp"
            android:text="@string/post_map_back_btn"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/button_main"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>