<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:theme="@style/AppTheme"
    tools:context=".ui.PostDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
            android:id="@+id/postImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/item_post_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_max="500dp" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/text_title_bright"
            app:layout_constraintTop_toBottomOf="@id/postImage"
            app:layout_constraintStart_toStartOf="@id/postImage"
            app:layout_constraintEnd_toEndOf="@id/postImage" />

        <TextView
            android:id="@+id/postAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/text_title_main"
            app:layout_constraintTop_toBottomOf="@id/postTitle"
            app:layout_constraintStart_toStartOf="@id/postImage"
            app:layout_constraintEnd_toEndOf="@id/postImage" />

        <TextView
            android:id="@+id/postDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="17sp"
            android:textColor="@color/text_description_main"
            app:layout_constraintTop_toBottomOf="@id/postAuthor"
            app:layout_constraintStart_toStartOf="@id/postImage"
            app:layout_constraintEnd_toEndOf="@id/postImage" />

        <TextView
            android:id="@+id/postLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/text_description_main"
            app:layout_constraintTop_toBottomOf="@id/postDescription"
            app:layout_constraintStart_toStartOf="@id/postImage"
            app:layout_constraintEnd_toEndOf="@id/postImage" />

        <Button
            android:id="@+id/locationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/post_details_location"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/button_main"
            app:layout_constraintTop_toBottomOf="@id/postLocation"
            app:layout_constraintStart_toStartOf="@id/postImage"
            app:layout_constraintEnd_toStartOf="@+id/addCommentButton" />

        <Button
            android:id="@+id/addCommentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/post_details_add_comment"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/button_main"
            app:layout_constraintTop_toBottomOf="@id/postLocation"
            app:layout_constraintStart_toEndOf="@+id/locationButton"
            app:layout_constraintEnd_toEndOf="@id/postImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/locationButton"
            app:layout_constraintStart_toStartOf="@id/postImage"
            app:layout_constraintEnd_toEndOf="@id/postImage" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/post_details_back_to_list"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/button_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentsRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>